// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema allows up to 10k tokens 1`] = `null`;

exports[`schema checks extensions 1`] = `null`;

exports[`schema checks extensions 2`] = `
Array [
  Object {
    "instancePath": "/markets/0/extensions/abc",
    "keyword": "type",
    "message": "must be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/0/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/abc",
    "keyword": "type",
    "message": "must be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/1/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/abc",
    "keyword": "type",
    "message": "must be number",
    "params": Object {
      "type": "number",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/2/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/abc",
    "keyword": "type",
    "message": "must be null",
    "params": Object {
      "type": "null",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/3/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/abc",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "#/definitions/ExtensionValue/anyOf",
  },
  Object {
    "instancePath": "/markets/0/extensions/def",
    "keyword": "type",
    "message": "must be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/0/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/def",
    "keyword": "type",
    "message": "must be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/1/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/def",
    "keyword": "type",
    "message": "must be number",
    "params": Object {
      "type": "number",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/2/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/def",
    "keyword": "type",
    "message": "must be null",
    "params": Object {
      "type": "null",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/3/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/def",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "#/definitions/ExtensionValue/anyOf",
  },
  Object {
    "instancePath": "/markets/0/extensions/isBoolean",
    "keyword": "type",
    "message": "must be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/0/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isBoolean",
    "keyword": "type",
    "message": "must be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/1/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isBoolean",
    "keyword": "type",
    "message": "must be number",
    "params": Object {
      "type": "number",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/2/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isBoolean",
    "keyword": "type",
    "message": "must be null",
    "params": Object {
      "type": "null",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/3/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isBoolean",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "#/definitions/ExtensionValue/anyOf",
  },
  Object {
    "instancePath": "/markets/0/extensions/isNull",
    "keyword": "type",
    "message": "must be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/0/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isNull",
    "keyword": "type",
    "message": "must be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/1/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isNull",
    "keyword": "type",
    "message": "must be number",
    "params": Object {
      "type": "number",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/2/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isNull",
    "keyword": "type",
    "message": "must be null",
    "params": Object {
      "type": "null",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/3/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/isNull",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "#/definitions/ExtensionValue/anyOf",
  },
  Object {
    "instancePath": "/markets/0/extensions/tooLong",
    "keyword": "maxLength",
    "message": "must NOT have more than 42 characters",
    "params": Object {
      "limit": 42,
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/0/maxLength",
  },
  Object {
    "instancePath": "/markets/0/extensions/tooLong",
    "keyword": "type",
    "message": "must be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/1/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/tooLong",
    "keyword": "type",
    "message": "must be number",
    "params": Object {
      "type": "number",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/2/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/tooLong",
    "keyword": "type",
    "message": "must be null",
    "params": Object {
      "type": "null",
    },
    "schemaPath": "#/definitions/ExtensionValue/anyOf/3/type",
  },
  Object {
    "instancePath": "/markets/0/extensions/tooLong",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "#/definitions/ExtensionValue/anyOf",
  },
]
`;

exports[`schema checks token address 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/address",
    "keyword": "pattern",
    "message": "must match pattern \\"^0x[a-fA-F0-9]{40}$\\"",
    "params": Object {
      "pattern": "^0x[a-fA-F0-9]{40}$",
    },
    "schemaPath": "#/properties/address/pattern",
  },
]
`;

exports[`schema checks token address 2`] = `
Array [
  Object {
    "instancePath": "/tokens/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/address",
    "keyword": "pattern",
    "message": "must match pattern \\"^0x[a-fA-F0-9]{40}$\\"",
    "params": Object {
      "pattern": "^0x[a-fA-F0-9]{40}$",
    },
    "schemaPath": "#/properties/address/pattern",
  },
]
`;

exports[`schema checks trigger address 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/trigger",
    "keyword": "pattern",
    "message": "must match pattern \\"^0x[a-fA-F0-9]{40}$\\"",
    "params": Object {
      "pattern": "^0x[a-fA-F0-9]{40}$",
    },
    "schemaPath": "#/properties/trigger/pattern",
  },
]
`;

exports[`schema checks version 1`] = `
Array [
  Object {
    "instancePath": "/version/patch",
    "keyword": "minimum",
    "message": "must be >= 0",
    "params": Object {
      "comparison": ">=",
      "limit": 0,
    },
    "schemaPath": "#/definitions/Version/properties/patch/minimum",
  },
]
`;

exports[`schema checks version 2`] = `
Array [
  Object {
    "instancePath": "/version/minor",
    "keyword": "minimum",
    "message": "must be >= 0",
    "params": Object {
      "comparison": ">=",
      "limit": 0,
    },
    "schemaPath": "#/definitions/Version/properties/minor/minimum",
  },
]
`;

exports[`schema checks version 3`] = `
Array [
  Object {
    "instancePath": "/version/major",
    "keyword": "minimum",
    "message": "must be >= 0",
    "params": Object {
      "comparison": ">=",
      "limit": 0,
    },
    "schemaPath": "#/definitions/Version/properties/major/minimum",
  },
]
`;

exports[`schema empty list fails 1`] = `
Array [
  Object {
    "instancePath": "/markets",
    "keyword": "minItems",
    "message": "must NOT have fewer than 1 items",
    "params": Object {
      "limit": 1,
    },
    "schemaPath": "#/properties/markets/minItems",
  },
]
`;

exports[`schema fails with 10001 tokens 1`] = `
Array [
  Object {
    "instancePath": "/markets",
    "keyword": "maxItems",
    "message": "must NOT have more than 10000 items",
    "params": Object {
      "limit": 10000,
    },
    "schemaPath": "#/properties/markets/maxItems",
  },
]
`;

exports[`schema fails with big names 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/name",
    "keyword": "maxLength",
    "message": "must NOT have more than 100 characters",
    "params": Object {
      "limit": 100,
    },
    "schemaPath": "#/properties/name/maxLength",
  },
]
`;

exports[`schema invalid decimals 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/decimals",
    "keyword": "maximum",
    "message": "must be <= 255",
    "params": Object {
      "comparison": "<=",
      "limit": 255,
    },
    "schemaPath": "#/properties/decimals/maximum",
  },
]
`;

exports[`schema invalid decimals 2`] = `
Array [
  Object {
    "instancePath": "/markets/0/decimals",
    "keyword": "minimum",
    "message": "must be >= 0",
    "params": Object {
      "comparison": ">=",
      "limit": 0,
    },
    "schemaPath": "#/properties/decimals/minimum",
  },
]
`;

exports[`schema invalid decimals 3`] = `
Array [
  Object {
    "instancePath": "/tokens/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/decimals",
    "keyword": "maximum",
    "message": "must be <= 255",
    "params": Object {
      "comparison": "<=",
      "limit": 255,
    },
    "schemaPath": "#/properties/decimals/maximum",
  },
]
`;

exports[`schema invalid decimals 4`] = `
Array [
  Object {
    "instancePath": "/tokens/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/decimals",
    "keyword": "minimum",
    "message": "must be >= 0",
    "params": Object {
      "comparison": ">=",
      "limit": 0,
    },
    "schemaPath": "#/properties/decimals/minimum",
  },
]
`;

exports[`schema invalid logo URI 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/logoURI",
    "keyword": "format",
    "message": "must match format \\"uri\\"",
    "params": Object {
      "format": "uri",
    },
    "schemaPath": "#/properties/logoURI/format",
  },
]
`;

exports[`schema invalid logo URI 2`] = `
Array [
  Object {
    "instancePath": "/tokens/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logoURI",
    "keyword": "format",
    "message": "must match format \\"uri\\"",
    "params": Object {
      "format": "uri",
    },
    "schemaPath": "#/properties/logoURI/format",
  },
]
`;

exports[`schema invalid number of tags on token 1`] = `
Array [
  Object {
    "instancePath": "/markets/0/tags",
    "keyword": "maxItems",
    "message": "must NOT have more than 10 items",
    "params": Object {
      "limit": 10,
    },
    "schemaPath": "#/properties/tags/maxItems",
  },
]
`;

exports[`schema invalid timestamp 1`] = `
Array [
  Object {
    "instancePath": "/timestamp",
    "keyword": "format",
    "message": "must match format \\"date-time\\"",
    "params": Object {
      "format": "date-time",
    },
    "schemaPath": "#/properties/timestamp/format",
  },
]
`;

exports[`schema minimum example schema 1`] = `null`;

exports[`schema requires name, timestamp, version, tokens 1`] = `
Array [
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'name'",
    "params": Object {
      "missingProperty": "name",
    },
    "schemaPath": "#/required",
  },
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'timestamp'",
    "params": Object {
      "missingProperty": "timestamp",
    },
    "schemaPath": "#/required",
  },
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'version'",
    "params": Object {
      "missingProperty": "version",
    },
    "schemaPath": "#/required",
  },
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'markets'",
    "params": Object {
      "missingProperty": "markets",
    },
    "schemaPath": "#/required",
  },
]
`;

exports[`schema works for big example schema 1`] = `null`;

exports[`schema works for example schema 1`] = `null`;

exports[`schema works for special characters schema 1`] = `null`;
